force-app/main/default/objects/Step__c/Step__c.object-meta.xml
<CustomObject>
    <label>Step</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>