force-app/main/default/objects/Step__c/fields/Actor_Role__c.field-meta.xml
<CustomField>
    <fullName>Actor_Role__c</fullName>
    <label>Actor Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>