force-app/main/default/objects/Step__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Previous Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>