force-app/main/default/objects/Step__c/fields/Next_Step_Id__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Id__c</fullName>
    <label>Next Step Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>