force-app/main/default/objects/Step__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>