force-app/main/default/objects/Step__c/fields/Process_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Id__c</fullName>
    <label>Process Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>